--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -39,8 +39,8 @@ NEED_ALSA   = @NEED_ALSA@
 # Sources.
 
 FSRC	= 8svx.c aiff.c au.c auto.c cdr.c cvsd.c dat.c g711.c g721.c \
-	  g723_24.c g723_40.c g72x.c gsm.c hcom.c maud.c oss.c raw.c \
-	  sbdsp.c sf.c smp.c sndrtool.c sunaudio.c tx16w.c voc.c wav.c wve.c
+	  g723_24.c g723_40.c g72x.c gsm.c hcom.c maud.c raw.c \
+	  sbdsp.c sf.c smp.c sndrtool.c tx16w.c voc.c wav.c wve.c
 
 ESRC	= avg.c band.c chorus.c copy.c cut.c deemphas.c dyn.c echo.c echos.c \
 	  flanger.c highp.c lowp.c map.c mask.c phaser.c pick.c \
@@ -58,8 +58,8 @@ LIBSRCS	= $(FSRC) $(ESRC) handlers.c libst.c misc.c util.c $(EXTRASRCS)
 # Objects.
 
 FOBJ	= 8svx.o aiff.o au.o auto.o cdr.o cvsd.o dat.o g711.o g721.o \
-	  g723_24.o g723_40.o g72x.o gsm.o hcom.o maud.o oss.o raw.o \
-	  sbdsp.o sf.o smp.o sndrtool.o sunaudio.o tx16w.o voc.o wav.o wve.o
+	  g723_24.o g723_40.o g72x.o gsm.o hcom.o maud.o raw.o \
+	  sbdsp.o sf.o smp.o sndrtool.o tx16w.o voc.o wav.o wve.o
 
 EOBJ	= avg.o band.o chorus.o copy.o cut.o deemphas.o dyn.o echo.o echos.o \
 	  flanger.o highp.o lowp.o map.o mask.o phaser.o pick.o \
