--- a/Makefile.unx
+++ b/Makefile.unx
@@ -27,7 +27,7 @@ SRCDIR	= sox-12.16
 
 ##############################################################################
 
-FSRC	= 8svx.c aiff.c au.c auto.c cdr.c cvsd.c dat.c g711.c g721.c \
+FSRC	= 8svx.c aiff.c alsa.c au.c auto.c cdr.c cvsd.c dat.c g711.c g721.c \
 	  g723_24.c g723_40.c g72x.c gsm.c hcom.c maud.c oss.c raw.c \
 	  sbdsp.c sf.c smp.c sndrtool.c sunaudio.c tx16w.c voc.c wav.c wve.c
 
@@ -68,7 +68,7 @@ FILES   = $(MISC) $(HEADERS) $(SOURCES) \
 
 ##############################################################################
 
-FOBJ	= 8svx.o aiff.o au.o auto.o cdr.o cvsd.o dat.o g711.o g721.o \
+FOBJ	= 8svx.o aiff.o alsa.o au.o auto.o cdr.o cvsd.o dat.o g711.o g721.o \
 	  g723_24.o g723_40.o g72x.o gsm.o hcom.o maud.o oss.o raw.o \
 	  sbdsp.o sf.o smp.o sndrtool.o sunaudio.o tx16w.o voc.o wav.o wve.o
 
@@ -139,15 +139,19 @@ GETOPT_DEFINES	= -DHAVE_GETOPT_H
 # If you have the GSM 6.10 libraries installed then uncomment the follow
 # 4 lines, and change to reflect your installation paths.
 #
-#GSM_PRE_LIBS	= -L/usr/local/lib
-#GSM_POST_LIBS	= -lgsm
-#GSM_INCLUDES	= -I/usr/local/include/
-#GSM_DEFINES	= -DHAS_GSM
+# GSM_PRE_LIBS	= -L/usr/local/lib
+# GSM_POST_LIBS	= -lgsm
+# GSM_INCLUDES	= -I/usr/local/include/
+# GSM_DEFINES	= -DHAS_GSM
 
 # For sound support on machines that include the OSS sound driver
 # (such as Linux) then uncomment the following line.
 #
-#PLAYER_DEFINES	= -DOSS_PLAYER
+# PLAYER_DEFINES = -DOSS_PLAYER
+
+# For sound support using the ALSA driver then uncomment the following line.
+#
+# PLAYER_DEFINES = - DALSA_PLAYER
 
 # For sound support under SunOS and Solaris then uncomment the following line.
 #
