--- a/configure.in
+++ b/configure.in
@@ -253,10 +253,8 @@ if test ! -f tests.sh; then cp ${srcdir}/tests.sh tests.sh; fi
 if test ! -f monkey.au; then cp ${srcdir}/monkey.au monkey.au; fi
 if test ! -f monkey.voc; then cp ${srcdir}/monkey.voc monkey.voc; fi
 
-touch .depend
-
 echo
-echo "Configure finished.  Do 'make depend; make' to compile SOX."
+echo "Configure finished.  Do 'make; make install' to compile and install SOX."
 echo
 
 dnl Local Variables:
