--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -100,12 +100,15 @@ man: sox.1 libst.3
 	nroff -man libst.3 | col -b > libst.txt
 
 install: sox
-	-$(INSTALL) -c -m 755 sox play rec $(BINDIR)
-	-$(INSTALL) -c -m 644 sox.1 play.1 $(MANDIR)/man1
+	if [ -f $(BINDIR)/rec ] ; then $(RM) $(BINDIR)/rec; fi
+	$(INSTALL) -c -m 755 sox play $(BINDIR)
+	$(INSTALL) -c -m 644 sox.1 play.1 $(MANDIR)/man1
+	ln -s $(BINDIR)/play $(BINDIR)/rec
+	ln -s $(MANDIR)/play.1 $(MANDIR)/rec.1
 
 install-lib: libst.a
-	-$(INSTALL) -c -m 644 libst.a $(LIBDIR)
-	-$(INSTALL) -c -m 644 libst.3 $(MANDIR)/man3
+	$(INSTALL) -c -m 644 libst.a $(LIBDIR)
+	$(INSTALL) -c -m 644 libst.3 $(MANDIR)/man3
 
 clean:
 	$(RM) *.o
