Fixing rec manual

--- a/Makefile.unx
+++ b/Makefile.unx
@@ -243,11 +243,12 @@ man: sox.1 libst.3
 	nroff -man libst.3 | col -b > libst.txt
 
 install: sox
-	if [ -f $(BINDIR)/rec ] ; then $(RM) $(BINDIR)/rec; fi
+	if [ -f $(BINDIR)/rec ] ; then $(RM) $(BINDIR)/rec ; fi
+	if [ -f $(MANDIR)/man1/rec.1 ] ; then $(RM) $(MANDIR)/man1/rec.1 ; fi
 	install -c -m 755 sox play $(BINDIR)
 	install -c -m 644 sox.1 play.1 $(MANDIR)/man1
 	ln -s $(BINDIR)/play $(BINDIR)/rec
-	ln -s $(MANDIR)/play.1 $(MANDIR)/rec.1
+	ln -s $(MANDIR)/man1/play.1 $(MANDIR)/man1/rec.1
 
 install-lib: libst.a
 	install -c -m 644 libst.a $(LIBDIR)
