--- a/configure.in
+++ b/configure.in
@@ -7,12 +7,6 @@ AC_REVISION([configure.in 0.3])
 AC_INIT(sox.c)
 dnl AC_CONFIG_HEADER(config.h)
 
-dnl Initial values for exported symbols.
-
-NEED_OSS=0
-NEED_SUNAU=0
-NEED_ALSA=0
-
 dnl Parameters to configure
 
 AC_ARG_ENABLE(old_rate,
@@ -50,6 +44,12 @@ AC_ARG_WITH(sun_audio,
 	[sun_audio="$withval"],
 	[sun_audio=auto])
 
+dnl Checks for programs.
+
+AC_PROG_CC
+AC_PROG_RANLIB
+AC_PROG_INSTALL
+
 dnl Set host type
 
 AC_CANONICAL_SYSTEM
@@ -77,13 +77,29 @@ case "$target" in
 		;;
 esac
 
-dnl Checks for programs.
+dnl Initial values for exported symbols.
 
-AC_PROG_CC
-AC_PROG_RANLIB
-AC_PROG_INSTALL
+NEED_OSS=0
+NEED_SUNAU=0
+NEED_ALSA=0
+
+CFLAGS="$CFLAGS -Wall"
 
 dnl Checks for libraries.
+
+dnl Check if math library is needed.
+
+AC_CHECKING(if math library is required during link)
+AC_CHECK_FUNC(pow)
+if test "$ac_cv_func_pow" = no
+then
+
+  AC_CHECK_LIB(m, pow)
+  if test "$ac_cv_lib_m" = yes
+  then
+	LIBS="$LIBS -lm"
+  fi
+fi
 
 dnl Test for GSM library.
 AC_CHECK_LIB(gsm, gsm_create)
@@ -188,7 +204,7 @@ fi
 if test "$sun_audio" = auto
 then
 	AC_CACHE_CHECK(
-		[whether /dev/audio is functional (SUN, etc)],
+		[whether /dev/audio is functional (SUN style)],
 		ac_cv_dev_sun_audio,
 		AC_TRY_RUN(
 			[
@@ -240,14 +256,6 @@ then
 fi
 
 LIBS="$LIBS -L. -lst"
-
-dnl Check if math library is needed.
-
-AC_CHECK_LIB(m, pow)
-if test "$ac_cv_lib_m" = yes
-then
-	LIBS="$LIBS -lm"
-fi
 
 AC_SUBST(NEED_OSS)
 AC_SUBST(NEED_SUNAU)
