--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -33,9 +33,10 @@ MANDIR  = $(prefix)/man
 
 # Other macros.
 
-NEED_OSS    = @NEED_OSS@
-NEED_SUNAU  = @NEED_SUNAU@
-NEED_ALSA   = @NEED_ALSA@
+NEED_OSS     = @NEED_OSS@
+NEED_SUNAU   = @NEED_SUNAU@
+NEED_ALSA    = @NEED_ALSA@
+PLAY_SUPPORT = @PLAY_SUPPORT@
 
 # Sources.
 
@@ -94,11 +95,18 @@ man: sox.1 libst.3
 	nroff -man sox.1 | col -b > sox.txt
 	nroff -man libst.3 | col -b > libst.txt
 
-install: sox
+PLAY_INSTALL_0    =
+PLAY_INSTALL_1    = install-play
+
+install: sox $(PLAY_INSTALL_$(PLAY_SUPPORT))
+	$(INSTALL) -c -m 755 sox $(BINDIR)
+	$(INSTALL) -c -m 644 sox.1 $(MANDIR)/man1
+
+install-play:
 	if [ -f $(BINDIR)/rec ] ; then $(RM) $(BINDIR)/rec; fi
 	if [ -f $(MANDIR)/man1/rec.1 ]; then $(RM) $(MANDIR)/man1/rec.1; fi
-	$(INSTALL) -c -m 755 sox play $(BINDIR)
-	$(INSTALL) -c -m 644 sox.1 play.1 $(MANDIR)/man1
+	$(INSTALL) -c -m 755 play $(BINDIR)
+	$(INSTALL) -c -m 644 play.1 $(MANDIR)/man1
 	ln -s $(BINDIR)/play $(BINDIR)/rec
 	ln -s $(MANDIR)/man1/play.1 $(MANDIR)/man1/rec.1
 
