--- a/Makefile.dos
+++ b/Makefile.dos
@@ -10,8 +10,8 @@
 # Need object files to know what libst.lib depends on.  All .c files
 # are compiled from default rules of make.
 
-FOBJ	= 8svx.obj aiff.obj alsa.obj au.obj auto.obj cdr.obj cvsd.obj dat.obj \
-	  g711.obj g721.obj g723_24.obj g723_40.obj g72x.obj gsm.obj \
+FOBJ	= 8svx.obj aiff.obj alsa.obj au.obj auto.obj avr.obj cdr.obj cvsd.obj \
+	  dat.obj g711.obj g721.obj g723_24.obj g723_40.obj g72x.obj gsm.obj \
 	  hcom.obj maud.obj oss.obj raw.obj sbdsp.obj sf.obj smp.obj \
 	  sndrtool.obj sunaudio.obj tx16w.obj voc.obj wav.obj wve.obj
 
