--- a/Makefile.unx
+++ b/Makefile.unx
@@ -22,6 +22,7 @@ PREFIX	= /usr/local
 BINDIR  = $(PREFIX)/bin
 LIBDIR	= $(PREFIX)/lib
 MANDIR  = $(PREFIX)/man
+INCDIR	= $(PREFIX)/include
 
 SRCDIR	= sox-12.16
 
@@ -31,8 +32,8 @@ FSRC	= 8svx.c aiff.c alsa.c au.c auto.c avr.c cdr.c cvsd.c dat.c g711.c \
 	  g721.c g723_24.c g723_40.c g72x.c gsm.c hcom.c maud.c oss.c raw.c \
 	  sbdsp.c sf.c smp.c sndrtool.c sunaudio.c tx16w.c voc.c wav.c wve.c
 
-ESRC	= avg.c band.c chorus.c copy.c cut.c deemphas.c dyn.c echo.c echos.c \
-	  flanger.c highp.c lowp.c map.c mask.c phaser.c pick.c \
+ESRC	= avg.c band.c chorus.c compand.c copy.c cut.c deemphas.c dyn.c echo.c \
+	  echos.c flanger.c highp.c lowp.c map.c mask.c phaser.c pick.c \
 	  polyphas.c rate.c resample.c reverb.c reverse.c split.c \
 	  stat.c swap.c vibro.c 
 
@@ -72,8 +73,8 @@ FOBJ	= 8svx.o aiff.o alsa.o au.o auto.o avr.o cdr.o cvsd.o dat.o g711.o \
 	  g721.o g723_24.o g723_40.o g72x.o gsm.o hcom.o maud.o oss.o raw.o \
 	  sbdsp.o sf.o smp.o sndrtool.o sunaudio.o tx16w.o voc.o wav.o wve.o
 
-EOBJ	= avg.o band.o chorus.o copy.o cut.o deemphas.o dyn.o echo.o echos.o \
-	  flanger.o highp.o lowp.o map.o mask.o phaser.o pick.o \
+EOBJ	= avg.o band.o chorus.o compand.o copy.o cut.o deemphas.o dyn.o echo.o \
+	  echos.o flanger.o highp.o lowp.o map.o mask.o phaser.o pick.o \
 	  polyphas.o rate.o resample.o reverb.o reverse.o split.o \
 	  stat.o swap.o vibro.o
 
@@ -261,6 +262,7 @@ install: sox
 install-lib: libst.a
 	install -c -m 644 libst.a $(LIBDIR)
 	install -c -m 644 libst.3 $(MANDIR)/man3
+	install -c -m 644 st.h $(INCDIR)
 
 clean:
 	$(RM) *~ *.o *.raw *.sf core sox libst.a
