--- a/Makefile.os9
+++ b/Makefile.os9
@@ -14,7 +14,7 @@ CC		=	cc
 
 FOBJ	= $(RDIR)/8svx.r $(RDIR)/aiff.r $(RDIR)/alsa.r $(RDIR)/au.r 
 	  $(RDIR)/auto.r $(RDIR)/avr.r \
-	  $(RDIR)/cdr.r $(RDIR)/cvsd.r $(RDIR)/dat.r $(RDIR)/g711.r \
+	  $(RDIR)/cdr.r $(RDIR)/cvsd.r $(RDIR)/dat.r \
 	  $(RDIR)/g721.r $(RDIR)/g723_24.r $(RDIR)/g723_40.r \
 	  $(RDIR)/g72x.r $(RDIR)/gsm.r $(RDIR)/hcom.r $(RDIR)/maud.r \
 	  $(RDIR)/oss.r $(RDIR)/raw.r $(RDIR)/sbdsp.r $(RDIR)/sf.r \
