--- a/Makefile.dos
+++ b/Makefile.dos
@@ -12,12 +12,12 @@
 
 FOBJ	= 8svx.obj aiff.obj alsa.obj au.obj auto.obj avr.obj cdr.obj cvsd.obj \
 	  dat.obj g721.obj g723_24.obj g723_40.obj g72x.obj gsm.obj \
-	  hcom.obj maud.obj oss.obj raw.obj sbdsp.obj sf.obj smp.obj \
+	  hcom.obj maud.obj oss.obj raw.obj sf.obj smp.obj \
 	  sndrtool.obj sunaudio.obj tx16w.obj voc.obj wav.obj wve.obj
 
 EOBJ	= avg.obj band.obj chorus.obj compand.obj copy.obj cut.obj \
-	  deemphas.obj dyn.obj echo.obj echos.obj flanger.obj highp.obj \
-          lowp.obj map.obj mask.obj phaser.obj pick.obj polyphas.obj \
+	  deemphas.obj dyn.obj echo.obj echos.obj filter.obj flanger.obj \
+          highp.obj lowp.obj map.obj mask.obj phaser.obj pick.obj polyphas.obj \
 	  rate.obj resample.obj reverb.obj reverse.obj split.obj \
 	  stat.obj swap.obj vibro.obj
 
