--- a/Makefile.gcc
+++ b/Makefile.gcc
@@ -30,12 +30,13 @@ SRCDIR	= sox-12.16
 
 FOBJ	= 8svx.o aiff.o alsa.o au.o auto.o avr.o cdr.o cvsd.o dat.o \
 	  g721.o g723_24.o g723_40.o g72x.o gsm.o hcom.o maud.o oss.o raw.o \
-	  sbdsp.o sf.o smp.o sndrtool.o sunaudio.o tx16w.o voc.o wav.o wve.o
+	  sf.o smp.o sndrtool.o sunaudio.o tx16w.o voc.o wav.o wve.o
 
-EOBJ	= avg.o band.o chorus.o compand.o copy.o cut.o deemphas.o dyn.o echo.o \
-	  echos.o flanger.o highp.o lowp.o map.o mask.o phaser.o pick.o \
-	  polyphas.o rate.o resample.o reverb.o reverse.o split.o \
-	  stat.o swap.o vibro.o
+EOBJ    = avg.o band.o bandpass.o breject.o btrworth.o chorus.o compand.o \
+          copy.o cut.o deemphas.o dyn.o echo.o echos.o filter.o flanger.o \
+          highp.o highpass.o lowp.o lowpass.o map.o mask.o phaser.o pick.o \
+          polyphas.o rate.o resample.o reverb.o reverse.o split.o \
+          stat.o swap.o vibro.o
 
 SOUNDLIB = libst.a
 LIBOBJS = $(FOBJ) $(EOBJ) handlers.o libst.o misc.o util.o getopt.o
