--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -41,8 +41,8 @@ PLAY_SUPPORT = @PLAY_SUPPORT@
 
 # Objects.
 
-FOBJ	= 8svx.o aiff.o au.o auto.o avr.o cdr.o cvsd.o dat.o g721.o \
-	  g723_24.o g723_40.o g72x.o gsm.o hcom.o maud.o raw.o \
+FOBJ	= 8svx.o adpcm.o aiff.o au.o auto.o avr.o cdr.o cvsd.o dat.o g721.o \
+	  g723_24.o g723_40.o g72x.o gsm.o hcom.o ima_rw.o maud.o raw.o \
 	  sf.o smp.o sndrtool.o tx16w.o voc.o wav.o wve.o
 
 EOBJ	= avg.o band.o bandpass.o breject.o btrworth.o chorus.o compand.o \
